syntax = "proto3";
package com.echo.proto;

option go_package = "github.com/savarin/echo-go";

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

service EchoService {
  rpc Echo (EchoRequest) returns (EchoResponse);
}
